<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:title="@string/device_info">
	    <Preference
	        android:key="address"
	        android:title="@string/address"
	        android:enabled="false" />
	
	    <Preference
	        android:key="model"
	        android:title="@string/model"
	        android:enabled="false" />
	
	    <Preference
	        android:key="display"
	        android:title="@string/display"
	        android:enabled="false" />
	
	    <Preference
	        android:key="build"
	        android:title="@string/build"
	        android:enabled="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/version_info">
	    <Preference
	        android:key="version"
	        android:title="@string/version"
	        android:enabled="false" />
	
	    <Preference
	        android:key="update"
	        android:title="@string/version_update"
	        android:summary="@string/version_check" />
    </PreferenceCategory>

</PreferenceScreen>
